fix on test item rating

--- a/templates/test_item_rating.html
+++ b/templates/test_item_rating.html
@@ -171,6 +171,7 @@
             </div>
 			{% endif %}
 			
+		</form>
 			
             <!-- second box -->
             <div class="container pt-4">
@@ -205,9 +206,9 @@
                             <span class="ms-4" id="content">Shoe 4</span>
                         </div>
                         <div class="col-3 border-bottom">
-                            <span id="content">Females in 40s</span><br />
-                            <span id="content">Males in 30s</span><br />
-                            <span id="content">Females in 20s</span>
+                            <span id="content">Age groups in 40s</span><br />
+                            <span id="content">Age groups in 30s</span><br />
+                            <span id="content">Age groups in 20s</span>
                         </div>
                         <div class="col-3 border-bottom">
                             <span id="content">5%</span><br />
@@ -215,7 +216,7 @@
                             <span id="content">50%</span>
                         </div>
                         <div class="col-2 border-bottom">
-                            <span class="pt-4" id="recommendation">Females in 20s</span>
+                            <span class="pt-4" id="recommendation">Age groups in 20s</span>
                         </div>
                     </div>
                 </div>
@@ -224,7 +225,6 @@
             <div class="row pt-4 pb-5">
                 <button class="ms-2" id="pbutton">View All</button>
             </div>
-		</form>
         </div>
     </div>
 </body>
