--- a/templates/view_project.html
+++ b/templates/view_project.html
@@ -128,13 +128,13 @@
                             <span class="ms-4" id="content">Shoe {{ item_lists[n]['id'] }}</span>
                         </div>
                         <div class="col-3 border-bottom">
-                            <span id="content">{{ item_lists[n]['gender'] }} in {{ item_lists[n]['age_group'] }}s</span>
+                            <span class="pt-4" id="content">Age groups {{ item_lists[n]['age_group'] }}s</span>
                         </div>
                         <div class="col-3 border-bottom">
-                            <span id="content">{{ item_lists[n]['rating'] }}</span>
+                            <span class="pt-4" id="content">{{ item_lists[n]['rating'] }}</span>
                         </div>
                         <div class="col-2 border-bottom">
-                            <span class="pt-4" id="recommendation">Females in 20s</span>
+                            <span class="pt-4" id="recommendation">Age groups in 20s</span>
                         </div>
                     </div>
 					{%	endfor	%}
@@ -193,9 +193,9 @@
                             <span class="ms-4" id="content">Shoe 3</span>
                         </div>
                         <div class="col-3 border-bottom">
-                            <span id="content">Females in 40s</span><br />
-                            <span id="content">Males in 30s</span><br />
-                            <span id="content">Females in 20s</span>
+                            <span id="content">Age groups in 40s</span><br />
+                            <span id="content">Age groups in 30s</span><br />
+                            <span id="content">Age groups in 20s</span>
                         </div>
                         <div class="col-3 border-bottom">
                             <span id="content">2%</span><br />
@@ -203,7 +203,7 @@
                             <span id="content">4%</span>
                         </div>
                         <div class="col-2 border-bottom">
-                            <span class="pt-4" id="recommendation">Females 18+</span>
+                            <span class="pt-4" id="recommendation">Age groups in 20s</span>
                         </div>
                     </div>
                 </div>
