minor fix based on test cases

--- a/templates/approve_reject_store_owners_administrator.html
+++ b/templates/approve_reject_store_owners_administrator.html
@@ -77,7 +77,7 @@ var check = function() {
                         </div>
                     </div>
                     <div class="ms-sm-0 row">
-                        <a class="ps-4 p-3 pb-4" id="link_sb" href="/adminoverview">
+                        <a class="ps-4 p-3 pb-4" id="link_sb" href="/administratoroverview">
                             <img class="icon_sb" src="images/overview_sidebar.png" />
                             <span>Overview</span>
                         </a>
