--- a/templates/manage_moderators_administrator.html
+++ b/templates/manage_moderators_administrator.html
@@ -91,7 +91,7 @@ var check = function() {
                         </a>
                         <a class="ps-4 p-3 pt-4" id="link_sb" href="/approverejectstoreowners">
                             <img class="icon_sb" src="images/profile_sidebar.png" />
-                            <span>Accept / Reject Store Owners</span>
+                            <span>Approve / Reject Store Owners</span>
                         </a>
                         <a class="ps-4 p-3 pt-4" id="link_sb" href="/logout">
                             <img class="icon_sb" src="images/logout_sidebar.png" />
