--- a/templates/approve_reject_store_owners_moderator.html
+++ b/templates/approve_reject_store_owners_moderator.html
@@ -88,7 +88,7 @@
                         </a>
                         <a class="active ps-4 p-3 pt-4 border-start border-3" id="link_sb" href="/approverejectstoreowners">
                             <img class="icon_sb" src="images/profile_sidebar_active.png" />
-                            <span style="font-size: 15px">Accept/Reject Store Owners</span>
+                            <span style="font-size: 15px">Approve / Reject Store Owners</span>
                         </a>
                         <a class="ps-4 p-3 pt-4" id="link_sb" href="/logout">
                             <img class="icon_sb" src="images/logout_sidebar.png" />
