--- a/templates/problem_reported.html
+++ b/templates/problem_reported.html
@@ -87,7 +87,7 @@
                         </a>
                         <a class="ps-4 p-3 pt-4" id="link_sb" href="/approverejectstoreowners">
                             <img class="icon_sb" src="images/profile_sidebar.png" />
-                            <span style="font-size: 15px">Accept/Reject Store Owners</span>
+                            <span style="font-size: 15px">Approve / Reject Store Owners</span>
                         </a>
                         <a class="ps-4 p-3 pt-4" id="link_sb" href="/logout">
                             <img class="icon_sb" src="images/logout_sidebar.png" />
