--- a/templates/create_project.html
+++ b/templates/create_project.html
@@ -142,13 +142,13 @@
                         <!-- second row -->
                         <div class="row">
                             <span class="ms-3 pb-2" id="inputhead">Project Name</span>
-                            <input class="ms-4 cpinput-l" type="text" placeholder="Name" name="pname" required>
+                            <input class="ms-4 cpinput-l" type="text" placeholder="Name" name="pname" readonly value="Demo" required>
                         </div>
                         <!-- third row -->
                         <div class="row pt-3 pb-3">
                             <div class="col">
                                 <span class="ms-3 pb-2" id="inputhead" >Category</span>
-								<select class="ms-3 ps-2 cpinput-s" required id="category" name="category" class="rdbox" disabled required>
+								<select class="ms-3 ps-2 cpinput-s" required id="category" name="category" class="rdbox" readonly required>
 									 <option value="" disabled selected hidden>Category</option>
 									 {% for cat in categories  %}
 									 {% if cat == "All" %}
@@ -160,13 +160,13 @@
                             </div>
                             <div class="col">
                                 <span class="pb-2" id="inputhead">Website URL</span>
-                                <input class="ps-2 cpinput-s" type="text" placeholder="URL" name="url" required>
+                                <input class="ps-2 cpinput-s" type="text" placeholder="URL" name="url" value="www.adidas.com" readonly required>
                             </div>
                         </div>
                         <!-- fourth row -->
 					<div class="row">
 						 <span class="ms-3 pb-2" id="inputhead">Target User Group</span>
-							<select class="ms-3 ps-2 cpinput-s" required id="agegroup" name="agegroup" class="rdbox" disabled required>
+							<select class="ms-3 ps-2 cpinput-s" required id="agegroup" name="agegroup" class="rdbox" readonly required>
 								<option value="" disabled hidden>Age Group</option>
 								<option value="10" disabled>below 20s</option>
 								<option value="20" selected>20-29</option>
