fix minor bug, edited algo to be able to take in input

--- a/templates/create_project.html
+++ b/templates/create_project.html
@@ -38,7 +38,7 @@
                             <img class="icon_sb" src="images/overview_sidebar.png" />
                             <span>Overview</span>
                         </a>
-                        <a class="active ps-4 p-3 border-start border-3" id="link_sb" href="#">
+                        <a class="active ps-4 p-3 border-start border-3" id="link_sb" href="/manageprojects">
                             <img class="icon_sb" src="images/manage_projects_sidebar_active.png" />
                             <span>Manage Projects</span>
                         </a>
@@ -109,21 +109,6 @@
                             </div>
                         </div>
                         <!-- fourth row -->
-			<div class="row">
-				 <span class="ms-3 pb-2" id="inputhead">Target User Group</span>
-					<select class="ms-3 ps-2 cpinput-s" required id="agegroup" name="agegroup" class="rdbox" required>
-						<option value="" disabled selected hidden>Select an Age Group</option>
-						<option value="10">below 20s</option>
-						<option value="20">20-29</option>
-						<option value="30">30-39</option>
-						<option value="40">40-49</option>
-						<option value="50">50-59</option>
-						<option value="60">60-69</option>
-						<option value="70">70-79</option>
-						<option value="80">above 80s</option>
-					</select>
-			</div>
-			<!--fifth row -->
                         <div class="row pt-5">
                             <button class="ms-4 createbtn" name="create" type="submit">Create</button>
                         </div>
@@ -163,21 +148,6 @@
                                 <input class="ps-2 cpinput-s" type="text" placeholder="URL" name="url" value="www.adidas.com" readonly required>
                             </div>
                         </div>
-                        <!-- fourth row -->
-					<div class="row">
-						 <span class="ms-3 pb-2" id="inputhead">Target User Group</span>
-							<select class="ms-3 ps-2 cpinput-s" required id="agegroup" name="agegroup" class="rdbox" readonly required>
-								<option value="" disabled hidden>Age Group</option>
-								<option value="10" disabled>below 20s</option>
-								<option value="20" selected>20-29</option>
-								<option value="30" disabled>30-39</option>
-								<option value="40" disabled>40-49</option>
-								<option value="50" disabled>50-59</option>
-								<option value="60" disabled>60-69</option>
-								<option value="70" disabled>70-79</option>
-								<option value="80" disabled>above 80s</option>
-							</select>
-					</div>
                         <!-- fourth row -->
                         <div class="row pt-5">
                             <button class="ms-4 createbtn" name="create" type="submit">Create</button>
