--- a/templates/landing_demousers.html
+++ b/templates/landing_demousers.html
@@ -33,11 +33,11 @@
                             </div>
                         </div>
                         <div class="ms-sm-0 row">
-                            <a class=" active ps-4 p-3 border-start border-3" id="link_sb" href="#">
+                            <a class=" active ps-4 p-3 border-start border-3" id="link_sb" href="/projectoverview">
                                 <img class="icon_sb" src="images/overview_sidebar_active.png" />
                                 <span>Overview</span>
                             </a>
-                            <a class="ps-4 p-3 pt-4" id="link_sb" href="#">
+                            <a class="ps-4 p-3 pt-4" id="link_sb" href="/manageprojects">
                                 <img class="icon_sb" src="images/manage_projects_sidebar.png" />
                                 <span>Manage Projects</span>
                             </a>
@@ -45,7 +45,7 @@
                                 <img class="icon_sb" src="images/profile_sidebar.png" />
                                 <span>View Profile</span>
                             </a>
-                            <a class="ps-4 p-3 pt-4" id="link_sb" href="#">
+                            <a class="ps-4 p-3 pt-4" id="link_sb" href="/problemreporting">
                                 <img class="icon_sb" src="images/problem_reporting_sidebar.png" />
                                 <span>Problem Reporting</span>
                             </a>
@@ -129,7 +129,7 @@
                                 </div>
 									<div class="row">
 										<div class="col border-bottom">
-											<span class="pt-4 ms-3" id="content"><a style="text-decoration:none;color:black;" href="#"></a></span>
+											<span class="pt-4 ms-3" id="content"><a style="text-decoration:none;color:black;" href="/problemreporting"></a></span>
 										</div>
 										<div class="col border-bottom" style="text-align: right;">
 											<span class="pt-4" id="status"></span>
