--- a/templates/landing_moderators.html
+++ b/templates/landing_moderators.html
@@ -69,7 +69,7 @@
                     <img class="me-4" src="images/notif_header.png" />
                 </div>
                 <div class="col-2 border-start text-end">
-                    <span class="me-5" id="mnsubhead">Moderator</span>
+                    <span class="me-5" id="mnsubhead">{{ fullname }}</span>
                 </div>
             </div>
             <!-- first box -->
