--- a/templates/landing_storeowners.html
+++ b/templates/landing_storeowners.html
@@ -33,7 +33,7 @@
                             </div>
                         </div>
                         <div class="ms-sm-0 row">
-                            <a class=" active ps-4 p-3 border-start border-3" id="link_sb" href="#">
+                            <a class=" active ps-4 p-3 border-start border-3" id="link_sb" href="/projectoverview">
                                 <img class="icon_sb" src="images/overview_sidebar_active.png" />
                                 <span>Overview</span>
                             </a>
