--- a/templates/manage_project.html
+++ b/templates/manage_project.html
@@ -38,7 +38,7 @@
                             <img class="icon_sb" src="images/overview_sidebar.png" />
                             <span>Overview</span>
                         </a>
-                        <a class="active ps-4 p-3 border-start border-3" id="link_sb" href="#">
+                        <a class="active ps-4 p-3 border-start border-3" id="link_sb" href="/manageprojects">
                             <img class="icon_sb" src="images/manage_projects_sidebar_active.png" />
                             <span>Manage Projects</span>
                         </a>
