--- a/templates/subscription_plan.html
+++ b/templates/subscription_plan.html
@@ -71,11 +71,23 @@
                 <a href="/about" class="header-link">About Us</a>
                 <a href="/contactus" class="header-link">Contact Us</a>
                 <a href="/subscription" class="header-link">Subscription Plan</a>
+				{% if role == "store_owner" or role == "demo_user" or role == "sign_up_user" %}				
+				<a href="/projectoverview" class="header-link">Project Overview</a>
+				{% elif role == "moderator" %}
+				<a href="/moderatoroverview" class="header-link">Moderator Overview</a>
+				{% elif role == "administrator" %}
+				<a href="/administratoroverview" class="header-link">Administrator Overview</a>
+				{% else %}				
                 <a href="/login" class="header-link">Login/Signup</a>
+				{% endif %}
               </div>
               <div class="col-sm-2 align-self-center right-header-col">
                 <div class="button">
-                  <span><a href="/demo" class="btnText">Request Demo</a></span>
+				{% if role != "" %}				
+				<span><a href="/logout" class="btnText">Logout</a></span>
+				{% else %}				
+                <span><a href="/demo" class="btnText">Request Demo</a></span>
+				{% endif %}
                 </div>
               </div>
             </div>
@@ -106,7 +118,6 @@
                   <div class="col-sm-4"></div>
                   <div class="col-sm-8 pb-5">
                     <span id="sb_content">2 Projects<br />
-                      1 License</span>
                   </div>
                 </div>
                 <div class="text-center pt-5">
@@ -128,8 +139,7 @@
                 <div class="row">
                   <div class="col-sm-4"></div>
                   <div class="col-sm-8 pb-5">
-                    <span id="sb_content">2 Projects<br />
-                      10 License</span>
+                    <span id="sb_content">5 Projects<br />
                   </div>
                 </div>
                 <div class="text-center pt-5">
@@ -152,7 +162,6 @@
                   <div class="col-sm-4"></div>
                   <div class="col-sm-8 pb-5">
                     <span id="sb_content">Unlimited Projects<br />
-                      100 License</span>
                   </div>
                 </div>
                 <div class="text-center pt-5">
