--- a/templates/view_profile.html
+++ b/templates/view_profile.html
@@ -43,7 +43,7 @@
                             <img class="icon_sb" src="images/manage_projects_sidebar.png" />
                             <span>Manage Projects</span>
                         </a>
-                        <a class="active ps-4 p-3 border-start border-3" id="link_sb" href="#">
+                        <a class="active ps-4 p-3 border-start border-3" id="link_sb" href="/userprofile">
                             <img class="icon_sb" src="images/profile_sidebar_active.png" />
                             <span>View Profile</span>
                         </a>
