--- a/templates/register.html
+++ b/templates/register.html
@@ -102,13 +102,13 @@ var check = function() {
                       <div class="row">
                         <div class="col"><p class="input-field-tag">PASSWORD</p></div>
                       </div>
-                      <input class="input-field" id="passwordInput" type="password" name="password" placeholder="Password" required maxlength="32" required pattern="(?=.*\d)(?=.*[\W_]).{12,}" title="Minimum of 12 characters. Should have at least one special character and one number and one UpperCase Letter." onkeyup="check();">
+                      <input class="input-field" id="passwordInput" type="password" name="password" placeholder="Password" required maxlength="32" required pattern="(?=.*\d)(?=.*[\W_])(?=.*[A-Z])(?=.*[a-z]).{12,}" title="Minimum of 12 characters. Should have at least one special character and one number and one UpperCase Letter." onkeyup="check();">
                         <div style="position: relative;"><img class="toggle-icon" id="showPasswordBtn" src="images/passwordtoggle.png" onmousedown="showPassword()" onmouseup="showPassword()"></img></div>
                       </input>
                       <div class="row">
                         <div class="col"><p class="input-field-tag">CONFIRM PASSWORD</p></div>
                       </div>
-                      <input class="input-field" id="passwordCfmInput" type="password" name="cfmPassword" placeholder="Password" required pattern="(?=.*\d)(?=.*[\W_]).{12,}" maxlength="32" title="Minimum of 12 characters. Should have at least one special character and one number and one UpperCase Letter." onkeyup="check();">
+                      <input class="input-field" id="passwordCfmInput" type="password" name="cfmPassword" placeholder="Password" required pattern="(?=.*\d)(?=.*[\W_])(?=.*[A-Z])(?=.*[a-z]).{12,}" maxlength="32" title="Minimum of 12 characters. Should have at least one special character and one number and one UpperCase Letter." onkeyup="check();">
 					  <span id='message'></span>
                         <div style="position: relative;"><img class="toggle-icon" id="showCfmPasswordBtn" src="images/passwordtoggle.png" onmousedown="showCfmPassword()" onmouseup="showCfmPassword()"></img></div>
                       </input>
