Minor Typo Update for approve_reject_store_owners_moderator.html
Existing Store Owners > Applications for Store Owners
Approve/Reject Store Owners > Approve / Reject Store Owners

--- a/templates/approve_reject_store_owners_moderator.html
+++ b/templates/approve_reject_store_owners_moderator.html
@@ -102,7 +102,7 @@
             <!-- overview header -->
             <div class="row">
                 <div class="col-8">
-                    <span id="mnheadline">Approve/Reject Store Owners</span>
+                    <span id="mnheadline">Approve / Reject Store Owners</span>
                 </div>
                 <div class="col-2 text-end">
                     <img class="me-4" src="images/notif_header.png" />
@@ -122,7 +122,7 @@
 						
 						<div id="mylist">
 							<div class="row pb-4">
-								<span class="ms-3" id="headline">Existing Store Owners
+								<span class="ms-3" id="headline">Applications for Store Owners
 								
 							
 									<span id="input-text">
