Minor Typo Update for problem_reported.html
Moderators > Moderator
Latest Problems Reported > Problems Reported

--- a/templates/problem_reported.html
+++ b/templates/problem_reported.html
@@ -69,7 +69,7 @@
                     <div class="ms-sm-0 row">
                         <div class="ms-4 pt-2 pb-5 logo-content">
                             <img src="images/logo.png" />
-                            <span class="sbheadline">Moderators</span>
+                            <span class="sbheadline">Moderator</span>
                         </div>
                     </div>
                     <div class="ms-sm-0 row">
@@ -121,7 +121,7 @@
                     <!-- first row -->
                     <div class="row pb-5">
                         <div class="col">
-                            <span class="align-items-center ms-3" id="headline">Latest Problems Reported<span id="input-text"></span>
+                            <span class="align-items-center ms-3" id="headline">Problems Reported<span id="input-text"></span>
 									<span id="input-text">
 										<div class="dropdown">
 										  <a class="btn dropdown-toggle" style="margin-right: 5px;" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
