--- a/templates/manage_project.html
+++ b/templates/manage_project.html
@@ -33,7 +33,7 @@
                             <span class="sbheadline">Store Owner</span>
                         </div>
                     </div>
-                    <div class="ms-3 row">
+                    <div class="ms-sm-0 row">
                         <a class="ps-4 p-3 pb-4" id="link_sb" href="/projectoverview">
                             <img class="icon_sb" src="images/overview_sidebar.png" />
                             <span>Overview</span>
