Minor Visual Update for problem_reporting.html
Row 45 - active ps-4 p-3 border-start border-3 > ps-4 p-3 pt-4
Row 49 - ps-4 p-3 pt-4 > active ps-4 p-3 border-start border-3

--- a/templates/problem_reporting.html
+++ b/templates/problem_reporting.html
@@ -42,11 +42,11 @@
                             <img class="icon_sb" src="images/manage_projects_sidebar.png" />
                             <span>Manage Projects</span>
                         </a>
-                        <a class="active ps-4 p-3 border-start border-3" id="link_sb" href="/userprofile">
+                        <a class="ps-4 p-3 pt-4" id="link_sb" href="/userprofile">
                             <img class="icon_sb" src="images/profile_sidebar_active.png" />
                             <span>View Profile</span>
                         </a>
-                        <a class="ps-4 p-3 pt-4" id="link_sb" href="/problemreporting">
+                        <a class="active ps-4 p-3 border-start border-3" id="link_sb" href="/problemreporting">
                             <img class="icon_sb" src="images/problem_reporting_sidebar.png" />
                             <span>Problem Reporting</span>
                         </a>
