--- a/templates/store_owner_faqs.html
+++ b/templates/store_owner_faqs.html
@@ -63,7 +63,7 @@
                             <img class="icon_sb" src="images/manage_projects_sidebar.png" />
                             <span>Manage Projects</span>
                         </a>
-                        <a class="active ps-4 p-3 border-start border-3" id="link_sb" href="/userprofile">
+                        <a class="ps-4 p-3 pt-4" id="link_sb" href="/userprofile">
                             <img class="icon_sb" src="images/profile_sidebar_active.png" />
                             <span>View Profile</span>
                         </a>
@@ -71,7 +71,7 @@
                             <img class="icon_sb" src="images/problem_reporting_sidebar.png" />
                             <span>Problem Reporting</span>
                         </a>
-                        <a class="ps-4 p-3 pt-4" id="link_sb" href="#">
+                        <a class="active ps-4 p-3 border-start border-3" id="link_sb" href="#">
                             <img class="icon_sb" src="images/faq_sidebar.png" />
                             <span>FAQ</span>
                         </a>
