--- a/templates/problem_reporting.html
+++ b/templates/problem_reporting.html
@@ -83,7 +83,7 @@
                     <!-- first row -->
                     <div class="row pt-4 text-center">
                         <span id="headline">Please describe your problem</span>
-                        <textarea class="problem" name="problem"></textarea>
+                        <textarea class="problem" name="problem" required></textarea>
                     </div>
                     <div class="row pt-3 pb-4">
                         <span id="headline">Screenshots</span>
